# dprint-plugin-clang

./: .gitignore  Cargo.toml  README.md  dprint.json  plugin.json
src/: configuration.rs  main.rs  plugin.rs
xtask/: Cargo.toml
xtask/src/: main.rs  package.rs
